<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:paddingStart="@dimen/_20sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingEnd="@dimen/_20sdp"

    tools:context=".presentation.views.dashboard.DashBoardFragment">

    <TextView
        android:id="@+id/txtGreetings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_70sdp"
        android:text="@string/discover_your_dream_job"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toStartOf="@id/appSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hello, Danny" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appSettings"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/curved_button_background"
        android:scaleType="center"
        android:src="@drawable/ic_manage_accounts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/search_background"
        android:focusableInTouchMode="true"
        app:defaultQueryHint="@string/app_name"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGreetings"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/search_hint" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:scrollbars="none"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="13dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:minHeight="@dimen/_150sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/jobForMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jobs_for_you"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_17ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/showJobsForMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_all"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/textColor"
                    app:layout_constraintTop_toTopOf="@id/jobForMe"
                    android:fontFamily="@font/circular_std_medium_500"
                    app:layout_constraintBottom_toBottomOf="@id/jobForMe"
                    app:layout_constraintRight_toRightOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/jobsForMeRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal"
                    android:minHeight="@dimen/_120sdp"
                    tools:listitem="@layout/job_item"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/jobForMe"
                     />
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/progressBar"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="loading.json"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    app:layout_constraintTop_toTopOf="@id/jobsForMeRv"
                    app:layout_constraintBottom_toBottomOf="@id/jobsForMeRv"
                    app:layout_constraintStart_toStartOf="@id/jobsForMeRv"
                    app:layout_constraintEnd_toEndOf="@id/jobsForMeRv"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:minHeight="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/allJobs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_jobs"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_17ssp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/showAllJobs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_all"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/textColor"
                    app:layout_constraintTop_toTopOf="@id/allJobs"
                    android:fontFamily="@font/circular_std_medium_500"
                    app:layout_constraintBottom_toBottomOf="@id/allJobs"
                    app:layout_constraintRight_toRightOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/allJobsRv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/job_item"
                    android:minHeight="@dimen/_250sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/allJobs"
                    />
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/progressBar1"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="loading.json"
                    android:layout_width="@dimen/_80sdp"
                    app:lottie_loop="true"
                    android:visibility="gone"
                    android:layout_height="@dimen/_80sdp"
                    app:layout_constraintTop_toTopOf="@id/allJobsRv"
                    app:layout_constraintBottom_toBottomOf="@id/allJobsRv"
                    app:layout_constraintStart_toStartOf="@id/allJobsRv"
                    app:layout_constraintEnd_toEndOf="@id/allJobsRv"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>